--- a/README
+++ b/README
@@ -1,4 +1,7 @@
-Need ImageMagick
+Need ImageMagick for paperclip
+
+For full-text search 
+Install elasticsearch http://www.elasticsearch.org/tutorials/2010/07/02/setting-up-elasticsearch-on-debian.html
                                                                                                          
 Smart IP API
 115aeca16%3CZmVmYTRrYS5ydQ%3D%3D5bbdc884b04dbb7b65f757d8e                     
@@ -6,4 +9,3 @@ Smart IP API
 IP InfoDB API
 e81d6eade0c8db2d83a4e41f970b768ee3e14280ededa3076889bd905c60b6d0
 http://api.ipinfodb.com/v3/ip-city/?key=e81d6eade0c8db2d83a4e41f970b768ee3e14280ededa3076889bd905c60b6d0&ip=74.125.45.100
-
